--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2003-09-08  Daniel Jacobowitz  <drow@mvista.com>
+
+	* infrun.c (normal_stop): Don't print a message if the inferior
+	has exited.
+
 2003-09-08  Jim Blandy  <jimb@redhat.com>
 
 	* Makefile.in (dbxread.o): Note new dependency on $(gdb_assert_h).
