--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,10 @@
 2003-09-08  Kevin Buettner  <kevinb@redhat.com>
 
+	* config/frv/frv.mt (SIM_OBS, SIM): Enable simulator for FR-V
+	target.
+
+2003-09-08  Kevin Buettner  <kevinb@redhat.com>
+
 	* frv-tdep.c (frame-unwind.h, frame-base.h): Include.
 	(frame_extra_info): Rename this struct to frv_unwind_cache.
 	Delete fields ``fp_to_callers_sp_offset'' and ``lr_saved_on_stack''.
