--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,11 @@
 2003-09-09  Andrew Cagney  <cagney@redhat.com>
 
+	* rs6000-tdep.c (rs6000_store_struct_return): Delete function.
+	(rs6000_push_dummy_call): Store the struct return address.
+	* ppc-sysv-tdep.c (ppc_sysv_abi_push_dummy_call): Ditto.
+
+2003-09-09  Andrew Cagney  <cagney@redhat.com>
+
 	* ppc-tdep.h (ppc_sysv_abi_push_dummy_call): Replace
 	"ppc_sysv_abi_push_arguments".
 	* ppc-sysv-tdep.c (ppc_sysv_abi_push_dummy_call): Replace
