--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-09  Ian Lance Taylor  <ian@wasabisystems.com>
+
+	* MAINTAINERS: Update my e-mail address.
+
 2003-09-09  Andrew Cagney  <cagney@redhat.com>
 
 	* rs6000-tdep.c (rs6000_store_struct_return): Delete function.
