--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,10 @@
 2003-09-09  Andrew Cagney  <cagney@redhat.com>
 
+	* rs6000-tdep.c (ppc_push_return_address): Delete function.
+	(rs6000_push_dummy_call): Set LR to BP_ADDR.
+	(rs6000_gdbarch_init): Do not set deprecated_push_return_address.
+	* ppc-sysv-tdep.c (ppc_sysv_abi_push_dummy_call): Ditto.
+
 	* rs6000-tdep.c (rs6000_fix_call_dummy): Delete function.
 	(rs6000_push_dummy_call): Set the "TOC" register.
 
