--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-10  James E Wilson  <wilson@specifixinc.com>
+
+	* MAINTAINERS: Change my e-mail address.
+
 2003-09-10  Kevin Buettner  <kevinb@redhat.com>
 
 	* MAINTAINERS (frv): New ISA entry.
