--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2003-09-10  J. Brobecker  <brobecker@gnat.com>
+
+	* hppa-tdep.c: Include "dis-asm.h". Fixes a build failure.
+	* Makefile.in (hppa-tdep.o): Update dependencies.
+
 2003-09-10  James E Wilson  <wilson@specifixinc.com>
 
 	* MAINTAINERS: Change my e-mail address.
