--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,17 @@
+2003-09-11  Andrew Cagney  <cagney@redhat.com>
+
+	* gdbarch.sh (DEPRECATED_STACK_ALIGN): Rename STACK_ALIGN.
+	* gdbarch.h, gdbarch.c: Re-generate.
+	* infcall.c (call_function_by_hand): Update.
+	* hppa-tdep.c (hppa_push_arguments): Update.
+	* ada-lang.c (place_on_stack): Update.
+	* xstormy16-tdep.c (xstormy16_gdbarch_init): Update.
+	* sparc-tdep.c (sparc_gdbarch_init): Update.
+	* m68hc11-tdep.c (m68hc11_gdbarch_init): Update.
+	* hppa-tdep.c (hppa_gdbarch_init): Update.
+	* h8300-tdep.c (h8300_gdbarch_init): Delete comment refering to
+	stack_align.
+
 2003-09-11  Daniel Jacobowitz  <drow@mvista.com>
 
 	* dwarf2loc.c (dwarf2_loc_desc_needs_frame): Variables in a
