Move myself to paper trail section.

--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -42,7 +42,8 @@
 
 2003-09-10  James E Wilson  <wilson@specifixinc.com>
 
-	* MAINTAINERS: Change my e-mail address.
+	* MAINTAINERS: Change my e-mail address.  Move to paper trail
+	section.
 
 2003-09-10  Kevin Buettner  <kevinb@redhat.com>
 
