2003-09-11  Elena Zannoni  <ezannoni@redhat.com>
        * gdb.base/relocate.exp: Handle new gdb output at startup.

--- a/gdb/testsuite/ChangeLog
+++ b/gdb/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-09-11  Elena Zannoni  <ezannoni@redhat.com>
+
+        * gdb.base/relocate.exp: Handle new gdb output at startup.
+
 2003-09-08  Michael Chastain  <mec@shout.net>
 
 	* gdb.base/gdb1250.c: Rename 'gamma' to 'my_gamma'.
