--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,9 @@
+2003-09-12  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* top.c (quit_target): New static helper function.
+	(quit_force): Moved code to quit_target().  Call quit_target()
+	via catch_errors() to catch errors during quit.
+
 2003-09-11  David Carlton  <carlton@kealia.com>
 
 	* buildsym.c (finish_block): Use allocate_block to allocate the
