--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,11 @@
+2003-09-12  Jim Blandy  <jimb@redhat.com>
+
+	* dbxread.c (read_dbx_symtab): The N_DATA and N_DATA | N_EXT
+	symbol types are, by definition, in the .data section, so it is
+	correct to use SECT_OFF_DATA (objfile) here, not data_sect_index.
+	If there is no .data section, there should be no N_DATA or N_DATA
+	| N_EXT symbols.
+
 2003-09-12  Mark Kettenis  <kettenis@gnu.org>
 
 	* amd64fbsd-tdep.c: Fix sigtramp recognition.
